trying to fix overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,12 @@ html, body {
   overflow-x: hidden; /* Prevents horizontal scrolling */
   width: 100vw;
   max-width: 100vw;
+  height: 100%;
+  position: relative;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
